--- a/BlockChain/BlockChain/BlockChain.csproj
+++ b/BlockChain/BlockChain/BlockChain.csproj
@@ -46,6 +46,7 @@
     <Compile Include="ArgumentWrapper.cs" />
     <Compile Include="CBlock.cs" />
     <Compile Include="CBlockChain.cs" />
+    <Compile Include="CGenesisBlock.cs" />
     <Compile Include="CIO.cs" />
     <Compile Include="CPeer.cs" />
     <Compile Include="CPeers.cs" />
@@ -55,6 +56,7 @@
     <Compile Include="ERequest.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RSA.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
