--- a/BlockChain/BlockChain/BlockChain.csproj
+++ b/BlockChain/BlockChain/BlockChain.csproj
@@ -54,10 +54,11 @@
     <Compile Include="CTemporaryBlock.cs" />
     <Compile Include="ECommand.cs" />
     <Compile Include="ERequest.cs" />
+    <Compile Include="PoW.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RSA.cs" />
-    <Compile Include="SHA.cs" />
+    <Compile Include="SHA1WIP.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
