--- a/BlockChain/BlockChain/BlockChain.csproj
+++ b/BlockChain/BlockChain/BlockChain.csproj
@@ -59,6 +59,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RSA.cs" />
     <Compile Include="SHA1WIP.cs" />
+    <Compile Include="Transaction.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
