Implementati metodi di ricerca input in base ad output. Implementata hashtable per indexing dei file UTXO. Migliorata classe Transaction. Implementato metodo byte[]>string e viceversa, DA TESTARE.

--- a/BlockChain/BlockChain/BlockChain.csproj
+++ b/BlockChain/BlockChain/BlockChain.csproj
@@ -69,6 +69,8 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RSA.cs" />
     <Compile Include="Transaction.cs" />
+    <Compile Include="Utilities.cs" />
+    <Compile Include="UTXO.cs" />
     <Compile Include="UTXOManager.cs" />
   </ItemGroup>
   <ItemGroup>
