--- a/BlockChain/BlockChain/BlockChain.csproj
+++ b/BlockChain/BlockChain/BlockChain.csproj
@@ -50,6 +50,7 @@
     <Compile Include="CBlock.cs" />
     <Compile Include="CBlockChain.cs" />
     <Compile Include="CGenesisBlock.cs" />
+    <Compile Include="CHeaderChain.cs" />
     <Compile Include="CIO.cs" />
     <Compile Include="CPeer.cs" />
     <Compile Include="CPeers.cs" />
