--- a/BlockChain/BlockChain/BlockChain.csproj
+++ b/BlockChain/BlockChain/BlockChain.csproj
@@ -55,7 +55,7 @@
     <Compile Include="CBlockChain.cs" />
     <Compile Include="CHeader.cs" />
     <Compile Include="CGenesisBlock.cs" />
-    <Compile Include="CHeaderChain.cs" />
+    <Compile Include="CParallelChain.cs" />
     <Compile Include="CIO.cs" />
     <Compile Include="CoinbaseTransaction.cs" />
     <Compile Include="CPeer.cs" />
