Cambiato costruttore CBlock e CHeader

--- a/BlockChain/BlockChain/BlockChain.csproj
+++ b/BlockChain/BlockChain/BlockChain.csproj
@@ -57,14 +57,14 @@
     <Compile Include="BlockChain\CBlockChain.cs" />
     <Compile Include="BlockChain\Block\CHeader.cs" />
     <Compile Include="BlockChain\Block\CGenesisBlock.cs" />
-    <Compile Include="CMessage.cs" />
+    <Compile Include="Network\CMessage.cs" />
     <Compile Include="BlockChain\CParallelChain.cs" />
     <Compile Include="CIO.cs" />
     <Compile Include="CoinbaseTransaction.cs" />
-    <Compile Include="CPeer.cs" />
-    <Compile Include="CPeers.cs" />
-    <Compile Include="CServer.cs" />
-    <Compile Include="CTemporaryBlock.cs" />
+    <Compile Include="Network\CPeer.cs" />
+    <Compile Include="Network\CPeers.cs" />
+    <Compile Include="Network\CServer.cs" />
+    <Compile Include="BlockChain\Block\CTemporaryBlock.cs" />
     <Compile Include="ECommand.cs" />
     <Compile Include="ERequest.cs" />
     <Compile Include="Input.cs" />
