modificata la classe CHeaderChain

--- a/BlockChain/BlockChain/BlockChain.csproj
+++ b/BlockChain/BlockChain/BlockChain.csproj
@@ -58,7 +58,7 @@
     <Compile Include="BlockChain\Block\CHeader.cs" />
     <Compile Include="BlockChain\Block\CGenesisBlock.cs" />
     <Compile Include="Network\CMessage.cs" />
-    <Compile Include="BlockChain\CParallelChain.cs" />
+    <Compile Include="BlockChain\CHeaderChain.cs" />
     <Compile Include="CIO.cs" />
     <Compile Include="CoinbaseTransaction.cs" />
     <Compile Include="Network\CPeer.cs" />
