--- a/.gitignore
+++ b/.gitignore
@@ -273,3 +273,7 @@ __pycache__/
 # Cake - Uncomment if you are using it
 # tools/**
 # !tools/packages.config
+.sync/StreamsList
+.sync/IgnoreList
+.sync/ID
+.sync/Archive/BlockChain/BlockChain/Miner.cs
